plugins {
    id 'application'
    id 'org.graalvm.buildtools.native' version '0.11.3'
    id 'com.gradleup.shadow' version '9.3.0'
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

application {
    mainClass = 'io.cloudchains.app.App'
}

ext {
    bitcoinjVersion = '0.14.7'
    nettyVersion = '4.1.115.Final'
    junitVersion = '5.11.3'
    slf4jVersion = '2.0.16'
    gsonVersion = '2.13.2'
}

version = "0.5.14"
group = 'io.cloudchains'

repositories {
    mavenCentral()
    gradlePluginPortal()
}

run {
    if (project.hasProperty('args')) {
        args project.args.split("=")
    }
    standardInput = System.in
}

shadowJar {
    // mergeServiceFiles()
}

test {
    useJUnitPlatform()
}


graalvmNative {
    binaries {
        main {
            buildArgs.add('--no-fallback')    
            imageName = 'xlite-daemon'
            mainClass = 'io.cloudchains.app.App'
            buildArgs.addAll([
                '--enable-native-access=ALL-UNNAMED',
                '--enable-url-protocols=http,https',
                '--features=com.oracle.svm.thirdparty.gson.GsonFeature',
                '--features=com.oracle.svm.polyglot.groovy.GroovyIndyInterfaceFeature',
                '--allow-incomplete-classpath',
                '--verbose',
                '--no-fallback',
                '--no-server'
            ])
            
            // Build-time initialization
            buildArgs.addAll([
                '--initialize-at-build-time=com.google.common.base.Charsets',
                '--initialize-at-build-time=com.google.common.math.IntMath$1',
                '--initialize-at-build-time=com.google.common.math.IntMath',
                '--initialize-at-build-time=com.google.common.base.Charsets$1',
                '--initialize-at-build-time=com.google.common.base.StandardCharsets',
                '--initialize-at-build-time=io.netty,org.apache.commons.logging,org.slf4j',
                '--initialize-at-build-time=org.slf4j.helpers.NOPLogger',
                '--initialize-at-build-time=org.slf4j.helpers.NOPLoggerFactory',
                '--initialize-at-build-time=org.slf4j.helpers.SubstituteLoggerFactory',
                '--initialize-at-build-time=org.slf4j.helpers.Util',
                '--initialize-at-build-time=org.slf4j.helpers.NOP_FallbackServiceProvider',
                '--initialize-at-build-time=org.slf4j.nop.NOPServiceProvider',
                '--initialize-at-build-time=org.slf4j.helpers.SubstituteServiceProvider',
                '--initialize-at-build-time=org.bitcoinj.core.Utils',
                '--initialize-at-build-time=org.bitcoinj.core.Sha256Hash',
                '--initialize-at-build-time=org.bitcoinj.crypto.MnemonicCode',
                '--initialize-at-build-time=com.google.common.io.BaseEncoding',
                '--initialize-at-build-time=com.google.common.io.BaseEncoding$Base16Encoding',
                '--initialize-at-build-time=com.google.common.io.BaseEncoding$Alphabet'
            ])
            
            // Runtime initialization
            buildArgs.addAll([
                '--initialize-at-run-time=io.netty.util.internal.logging.Log4JLogger',
                '--initialize-at-run-time=io.netty.handler.codec.http.HttpObjectEncoder',
                '--initialize-at-run-time=io.netty.handler.codec.http2.DefaultHttp2FrameWriter',
                '--initialize-at-run-time=io.netty.handler.codec.http2.Http2CodecUtil'
            ])
        }
    }
}

dependencies {
    implementation "org.bitcoinj:bitcoinj-core:${bitcoinjVersion}"
    implementation "org.bitcoinj:orchid:1.2.1"
    implementation 'net.jcip:jcip-annotations:1.0'
    implementation "org.json:json:20250517"
    implementation "org.apache.httpcomponents:httpclient:4.5.14"
    implementation "com.google.code.gson:gson:${gsonVersion}"
    implementation "commons-logging:commons-logging:1.2"
    implementation "org.slf4j:slf4j-nop:${slf4jVersion}"
    implementation "io.netty:netty-all:${nettyVersion}"
    implementation "com.google.code.findbugs:jsr305:3.0.2"
    compileOnly "org.graalvm.nativeimage:svm:21.+"
    
    testImplementation platform("org.junit:junit-bom:${junitVersion}")
    testImplementation "org.junit.jupiter:junit-jupiter-api:${junitVersion}"
    testRuntimeOnly "org.junit.jupiter:junit-jupiter-engine:${junitVersion}"
    testImplementation "org.junit.jupiter:junit-jupiter:${junitVersion}"
    testImplementation "org.junit.platform:junit-platform-launcher"
}
